fix checker